--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 *{
     font-family: "Space Grotesk", sans-serif;
+    font-weight: 700;
 }
 body {
     font-family: "Space Grotesk", sans-serif;
@@ -17,10 +18,12 @@ body {
 }
 
 .container {
-    background-color: #3C3D37;
+    background-color: #bfdecc27;
+    backdrop-filter: blur(4px);
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: absolute;
 }
 
 h1 {
@@ -36,8 +39,9 @@ input {
     width: calc(100% - 22px);
     padding: 10px;
     margin-bottom: 15px;
-    border: 1px solid #ECDFCC;
+    border: 1px solid #181C14;
     border-radius: 4px;
+    background-color: #697565;
 }
 
 button {
@@ -48,10 +52,13 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
 }
 
 button:hover {
     background-color: #697565;
+    transform: scale(1.4) translateY(-2px);
+    box-shadow: 0  0 25px #537F60;
 }
 
 .hidden {
@@ -61,4 +68,46 @@ button:hover {
 #results p {
     font-size: 1.2em;
     margin: 5px 0;
+}
+
+.snow{
+    position: absolute;
+    top:0;
+    left:0;
+    width:50px;
+    height:50px;
+    background-image: url(snow.png);
+    background-size: cover;
+    animation: animationSnow 4s ease-in-out infinite;
+}
+@keyframes animationSnow{
+    0%{
+        transform: translate(0,0);
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: translate(100px,50vh);
+    }
+}
+
+#container2{
+    position: relative;
+    width:100%;
+    height:100vh;
+    background-image: url(background.jpg);
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#container2 .wrapper .display h1{
+    color: rgba(69, 117, 76, 0.396);
+    padding: 10px;
+    padding-bottom: 20px;
 }
